2003-03-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* xxxacknowledgements.html:
	removed "thank you" for a contribution that was never made

2003-03-11  Mikhael Goikhman  <migo@homemail.com>

	* generated/manpages/*:
	regenerated 2.5.x and 2.4.x man pages (2.4.x version wins)

2003-02-28  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Added screenshot from Taviso.

2003-02-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.5.6

2003-02-25  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: New screenshot/rc file from Ploum.

2003-02-12  Dan Espen  <dane@mk.telcordia.com>

	* fvwm.ico: New shortcut icon from Chris Compell.
	* index.html: Add shortcut icon.

2003-02-11  Dan Espen  <dane@mk.telcordia.com>

	* sample-menus/index.html: New menu sample from Julien Coron.
	* screenshots/index.html: New screenshot from Brian Sturk.

2003-01-26  Dan Espen  <dane@mk.telcordia.com>

	* index.html: Update dates at bottom of page and indicate a date
	for 2.4.15.

2003-01-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* mailinglist.html:
	* index.html:
	added info about irc channels and cleaned up front page a bit

2003-01-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.15

2003-01-15  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Update location of Cameron Simpson's stuff.
	* links.html: Provide link to SCoTT SMeDLeY's FvwmTabs module.

2002-12-30  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html:
	Change the link to the full size image to a link
	to a generated page that contains the full size image.
	* screenshots/make-html.pl:
	Script to wrap each image in a generated page
	with forward and backward links.
	* screenshots/Cameron_Simpson-desk-2560x1024.png:
	Added, the link to his page wont
	work with the script.
	* XXX.html:
	Added a bunch of generated html pages, one for each full size image.

2002-12-29  Dan Espen  <dane@mk.telcordia.com>
