@@ -18,8 +18,11 @@ manager for the X&nbsp;Window system.
 Development is active, and support is excellent.
 Check it out!
 
+<p><font size="+1" color="yellow">UPCOMING!</font>
+<p>On the 1st of June 2003 we are celebrating fvwm's tenth birthday.
+Stay tuned for updates.
 <p><font size="+1" color="yellow">NEWS FLASH!</font>
-as of January 2003 FVWM 2.4.15, a stable
+<p>As of January 2003 FVWM 2.4.15, a stable
 release, is now available for <a href="download.html">download</a>.
 
 <hr>
