@@ -1,3 +1,8 @@
+2003-03-15  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* index.html:
+	added a news entry for the birthday
+
 2003-03-11  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* xxxacknowledgements.html:
